[project]
name = "pymoex"
version = "0.1.41"
description = "Async SDK for Moscow Exchange (MOEX) ISS API"
authors = [{ name = "Akxios" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["moex", "stocks", "bonds", "trading", "api", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
